# NinjaJump

./: README.md
project/: CMakeLists.txt  main.cpp
